update certifications testimonials assets & order

--- a/certifications/aerial-yoga-100.html
+++ b/certifications/aerial-yoga-100.html
@@ -442,12 +442,19 @@
                         <!-- Testimonial 1 -->
                         <div class="testimonial-slide active">
                             <div class="testimonial-photo">
-                                <div class="testimonial-initials">IH</div>
+                                <img srcset="/assets/photos/certifications/jenny-480.webp 480w,
+                                             /assets/photos/certifications/jenny-720.webp 720w,
+                                             /assets/photos/certifications/jenny-900.webp 900w,
+                                             /assets/photos/certifications/jenny-1200.webp 1200w"
+                                     sizes="(max-width: 768px) 100vw, 50vw"
+                                     src="/assets/photos/certifications/jenny-480.webp"
+                                     alt="Jenny - Aerial yoga training graduate from Colombia"
+                                     loading="lazy">
                             </div>
                             <div class="testimonial-content">
                                 <p class="testimonial-text" data-i18n="certifications:testimonials.items.0.quote">Completing the aerial yoga training was fulfilling one of my life goals...</p>
                                 <div class="testimonial-person">
-                                    <div class="testimonial-name" data-i18n="certifications:testimonials.items.0.name">Ika Hermenegilda</div>
+                                    <div class="testimonial-name" data-i18n="certifications:testimonials.items.0.name">Jenny</div>
                                     <div class="testimonial-meta">
                                         <span data-i18n="certifications:testimonials.items.0.location">Colombia</span>
                                     </div>
@@ -458,7 +465,14 @@
                         <!-- Testimonial 2 -->
                         <div class="testimonial-slide">
                             <div class="testimonial-photo">
-                                <div class="testimonial-initials">D</div>
+                                <img srcset="/assets/photos/certifications/dani-mexico-480.webp 480w,
+                                             /assets/photos/certifications/dani-mexico-720.webp 720w,
+                                             /assets/photos/certifications/dani-mexico-900.webp 900w,
+                                             /assets/photos/certifications/dani-mexico-1200.webp 1200w"
+                                     sizes="(max-width: 768px) 100vw, 50vw"
+                                     src="/assets/photos/certifications/dani-mexico-480.webp"
+                                     alt="Dani - Aerial yoga training graduate from Mexico"
+                                     loading="lazy">
                             </div>
                             <div class="testimonial-content">
                                 <p class="testimonial-text" data-i18n="certifications:testimonials.items.1.quote">For me, the certification was a beautiful process in which I could trust myself and my abilities...</p>
@@ -474,12 +488,19 @@
                         <!-- Testimonial 3 -->
                         <div class="testimonial-slide">
                             <div class="testimonial-photo">
-                                <div class="testimonial-initials">I</div>
+                                <img srcset="/assets/photos/certifications/aro-480.webp 480w,
+                                             /assets/photos/certifications/aro-720.webp 720w,
+                                             /assets/photos/certifications/aro-900.webp 900w,
+                                             /assets/photos/certifications/aro-1200.webp 1200w"
+                                     sizes="(max-width: 768px) 100vw, 50vw"
+                                     src="/assets/photos/certifications/aro-480.webp"
+                                     alt="Aro - Aerial yoga training graduate from Mexico"
+                                     loading="lazy">
                             </div>
                             <div class="testimonial-content">
-                                <p class="testimonial-text" data-i18n="certifications:testimonials.items.2.quote">The training was a complete physical and mental challenge for me...</p>
+                                <p class="testimonial-text" data-i18n="certifications:testimonials.items.2.quote">Participating in this training has been a transformative journey that exceeded all my expectations...</p>
                                 <div class="testimonial-person">
-                                    <div class="testimonial-name" data-i18n="certifications:testimonials.items.2.name">Itzel</div>
+                                    <div class="testimonial-name" data-i18n="certifications:testimonials.items.2.name">Aro</div>
                                     <div class="testimonial-meta">
                                         <span data-i18n="certifications:testimonials.items.2.location">Mexico</span>
                                     </div>
@@ -490,14 +511,21 @@
                         <!-- Testimonial 4 -->
                         <div class="testimonial-slide">
                             <div class="testimonial-photo">
-                                <div class="testimonial-initials">D</div>
+                                <img srcset="/assets/photos/certifications/itzel-480.webp 480w,
+                                             /assets/photos/certifications/itzel-720.webp 720w,
+                                             /assets/photos/certifications/itzel-900.webp 900w,
+                                             /assets/photos/certifications/itzel-1200.webp 1200w"
+                                     sizes="(max-width: 768px) 100vw, 50vw"
+                                     src="/assets/photos/certifications/itzel-480.webp"
+                                     alt="Itzel - Aerial yoga training graduate from Mexico"
+                                     loading="lazy">
                             </div>
                             <div class="testimonial-content">
-                                <p class="testimonial-text" data-i18n="certifications:testimonials.items.3.quote">From day one, I understood that aerial yoga isn't just about hanging from a fabric...</p>
+                                <p class="testimonial-text" data-i18n="certifications:testimonials.items.3.quote">The training was a complete physical and mental challenge for me...</p>
                                 <div class="testimonial-person">
-                                    <div class="testimonial-name" data-i18n="certifications:testimonials.items.3.name">Dani</div>
+                                    <div class="testimonial-name" data-i18n="certifications:testimonials.items.3.name">Itzel</div>
                                     <div class="testimonial-meta">
-                                        <span data-i18n="certifications:testimonials.items.3.location">Colombia</span>
+                                        <span data-i18n="certifications:testimonials.items.3.location">Mexico</span>
                                     </div>
                                 </div>
                             </div>
@@ -506,14 +534,21 @@
                         <!-- Testimonial 5 -->
                         <div class="testimonial-slide">
                             <div class="testimonial-photo">
-                                <div class="testimonial-initials">A</div>
+                                <img srcset="/assets/photos/certifications/dani-colombia-480.webp 480w,
+                                             /assets/photos/certifications/dani-colombia-720.webp 720w,
+                                             /assets/photos/certifications/dani-colombia-900.webp 900w,
+                                             /assets/photos/certifications/dani-colombia-1200.webp 1200w"
+                                     sizes="(max-width: 768px) 100vw, 50vw"
+                                     src="/assets/photos/certifications/dani-colombia-480.webp"
+                                     alt="Dani - Aerial yoga training graduate from Colombia"
+                                     loading="lazy">
                             </div>
                             <div class="testimonial-content">
-                                <p class="testimonial-text" data-i18n="certifications:testimonials.items.4.quote">Participating in this training has been a transformative journey that exceeded all my expectations...</p>
+                                <p class="testimonial-text" data-i18n="certifications:testimonials.items.4.quote">From day one, I understood that aerial yoga isn't just about hanging from a fabric...</p>
                                 <div class="testimonial-person">
-                                    <div class="testimonial-name" data-i18n="certifications:testimonials.items.4.name">Aro</div>
+                                    <div class="testimonial-name" data-i18n="certifications:testimonials.items.4.name">Dani</div>
                                     <div class="testimonial-meta">
-                                        <span data-i18n="certifications:testimonials.items.4.location">Mexico</span>
+                                        <span data-i18n="certifications:testimonials.items.4.location">Colombia</span>
                                     </div>
                                 </div>
                             </div>
