--- a/es/certifications/aerial-yoga-100.html
+++ b/es/certifications/aerial-yoga-100.html
@@ -442,14 +442,21 @@
                         <!-- Testimonial 1 -->
                         <div class="testimonial-slide active">
                             <div class="testimonial-photo">
-                                <div class="testimonial-initials">IH</div>
+                                <img srcset="/assets/photos/certifications/jenny-480.webp 480w,
+                                             /assets/photos/certifications/jenny-720.webp 720w,
+                                             /assets/photos/certifications/jenny-900.webp 900w,
+                                             /assets/photos/certifications/jenny-1200.webp 1200w"
+                                     sizes="(max-width: 767px) 100px, 150px"
+                                     src="/assets/photos/certifications/jenny-480.webp"
+                                     alt="Jenny - Aerial yoga training graduate from Colombia"
+                                     loading="lazy">
                             </div>
                             <div class="testimonial-content">
                                 <p class="testimonial-text">Realizar la formación en aerial yoga fue cumplir con uno de mis propósitos. De la belleza del cuerpo suspendido nace la consciencia del equilibrio, la fuerza y la coordinación para prolongar el movimiento en el aire. Esta práctica me permite sentirme más segura de mí misma, aceptar la naturaleza de mi cuerpo y a su vez, trabajar la sensualidad de una manera sutil.
 
 No dudé en tomar la certificación, porque sabía que tendría una gran maestra, quien me ha acompañado en este largo proceso y me ha permitido sembrar y florecer en el mundo del yoga, ella me sigue acompañando en los procesos y el hecho de que crea en mí y comparta su saber y sus experiencias, hace que mi ser también se expanda en alegría.</p>
                                 <div class="testimonial-person">
-                                    <div class="testimonial-name">Ika Hermenegilda</div>
+                                    <div class="testimonial-name">Jenny</div>
                                     <div class="testimonial-meta">
                                         <span>Colombia</span>
                                     </div>
@@ -460,7 +467,14 @@ No dudé en tomar la certificación, porque sabía que tendría una gran maestra
                         <!-- Testimonial 2 -->
                         <div class="testimonial-slide">
                             <div class="testimonial-photo">
-                                <div class="testimonial-initials">D</div>
+                                <img srcset="/assets/photos/certifications/dani-mexico-480.webp 480w,
+                                             /assets/photos/certifications/dani-mexico-720.webp 720w,
+                                             /assets/photos/certifications/dani-mexico-900.webp 900w,
+                                             /assets/photos/certifications/dani-mexico-1200.webp 1200w"
+                                     sizes="(max-width: 767px) 100px, 150px"
+                                     src="/assets/photos/certifications/dani-mexico-480.webp"
+                                     alt="Dani - Aerial yoga training graduate from Mexico"
+                                     loading="lazy">
                             </div>
                             <div class="testimonial-content">
                                 <p class="testimonial-text">Para mí la certificación fue un proceso muy lindo, en el que pude confiar en mi, en mis capacidades. Gracias a todo lo que nos compartieron pude reflexionar muchas cosas sobre mi vida, sobre como me relaciono con el mundo, como atravieso las experiencias vividas. Todas la practicas que tuvimos me enseñaron mucho de mí misma, y también de abrirme a los demás, de observar, escuchar, recibir.
@@ -478,7 +492,14 @@ Para mí la certificación llego en el momento correcto, por que estaba atravesa
                         <!-- Testimonial 3 -->
                         <div class="testimonial-slide">
                             <div class="testimonial-photo">
-                                <div class="testimonial-initials">I</div>
+                                <img srcset="/assets/photos/certifications/itzel-480.webp 480w,
+                                             /assets/photos/certifications/itzel-720.webp 720w,
+                                             /assets/photos/certifications/itzel-900.webp 900w,
+                                             /assets/photos/certifications/itzel-1200.webp 1200w"
+                                     sizes="(max-width: 767px) 100px, 150px"
+                                     src="/assets/photos/certifications/itzel-480.webp"
+                                     alt="Itzel - Aerial yoga training graduate from Mexico"
+                                     loading="lazy">
                             </div>
                             <div class="testimonial-content">
                                 <p class="testimonial-text">La formación para mí fue todo un reto físico y mental. Cami como maestra es excelente, me ayudó a no tenerle miedo a algunas posturas y sobretodo a desarrollar la fuerza y la confianza para realizarlas. Mis compañeras fueron un acompañamiento muy bonito y esencial durante toda la formación.
@@ -496,7 +517,14 @@ La parte teórica impartida por Harjeet fue muy extensa, es un maestro muy pacie
                         <!-- Testimonial 4 -->
                         <div class="testimonial-slide">
                             <div class="testimonial-photo">
-                                <div class="testimonial-initials">D</div>
+                                <img srcset="/assets/photos/certifications/dani-colombia-480.webp 480w,
+                                             /assets/photos/certifications/dani-colombia-720.webp 720w,
+                                             /assets/photos/certifications/dani-colombia-900.webp 900w,
+                                             /assets/photos/certifications/dani-colombia-1200.webp 1200w"
+                                     sizes="(max-width: 767px) 100px, 150px"
+                                     src="/assets/photos/certifications/dani-colombia-480.webp"
+                                     alt="Dani - Aerial yoga training graduate from Colombia"
+                                     loading="lazy">
                             </div>
                             <div class="testimonial-content">
                                 <p class="testimonial-text">Desde el primer entendí que el aéreo yoga no es solo colgarse de una tela. Mi sankalpa para esta experiencia fue: "Quiero recordar mi poder, habitar mi cuerpo con presencia y guiar a otros a encontrar confianza en el suyo."
@@ -514,7 +542,14 @@ Con la tela descubrí que soltar no siempre es caer, a veces soltar es sostenerm
                         <!-- Testimonial 5 -->
                         <div class="testimonial-slide">
                             <div class="testimonial-photo">
-                                <div class="testimonial-initials">A</div>
+                                <img srcset="/assets/photos/certifications/aro-480.webp 480w,
+                                             /assets/photos/certifications/aro-720.webp 720w,
+                                             /assets/photos/certifications/aro-900.webp 900w,
+                                             /assets/photos/certifications/aro-1200.webp 1200w"
+                                     sizes="(max-width: 767px) 100px, 150px"
+                                     src="/assets/photos/certifications/aro-480.webp"
+                                     alt="Aro - Aerial yoga training graduate from Mexico"
+                                     loading="lazy">
                             </div>
                             <div class="testimonial-content">
                                 <p class="testimonial-text">Participar en esta formación ha sido un viaje de transformación que superó todas mis expectativas. Si bien el avance físico fue notable, el verdadero regalo fue el boost de confianza que experimenté en el proceso. Logré superar miedos que antes me paralizaban y alcancé metas que, honestamente, nunca creí que fueran posibles para mí.
