add certifications course schema for SEO

--- a/certifications/aerial-yoga-100.html
+++ b/certifications/aerial-yoga-100.html
@@ -102,21 +102,43 @@
       "@context": "https://schema.org",
       "@type": "Course",
       "name": "100-Hour Aerial Yoga Teacher Training",
-      "description": "Comprehensive aerial yoga teacher training program covering technique, anatomy, philosophy, and teaching methodology.",
+      "description": "Become a certified aerial yoga teacher with our comprehensive 100-hour training program. Learn aerial technique, yogic philosophy, anatomy, pranayama, and teaching methodology from experienced instructors in Mexico City.",
+      "url": "https://sgpyoga.co/certifications/aerial-yoga-100.html",
+      "image": "https://sgpyoga.co/assets/photos/certifications/hero-1280.webp",
       "provider": {
         "@type": "Organization",
         "name": "SGP Yoga",
-        "url": "https://sgpyoga.co"
+        "url": "https://sgpyoga.co",
+        "logo": "https://sgpyoga.co/assets/logo/logoMain.png"
       },
+      "inLanguage": "es",
       "courseMode": "onsite",
       "educationalCredentialAwarded": "Aerial Yoga Teacher Certification",
-      "numberOfCredits": "100 hours",
+      "numberOfCredits": 100,
+      "timeRequired": "PT100H",
       "hasCourseInstance": {
         "@type": "CourseInstance",
         "name": "March 2026 Aerial Yoga Teacher Training",
         "startDate": "2026-03-07",
         "endDate": "2026-05-10",
         "courseWorkload": "PT100H",
+        "courseSchedule": {
+          "@type": "Schedule",
+          "byDay": ["Saturday", "Sunday"],
+          "repeatFrequency": "Weekly"
+        },
+        "instructor": [
+          {
+            "@type": "Person",
+            "name": "Camila",
+            "jobTitle": "Lead Trainer"
+          },
+          {
+            "@type": "Person",
+            "name": "Harjeet",
+            "jobTitle": "Supporting Trainer"
+          }
+        ],
         "location": {
           "@type": "Place",
           "name": "Aguacate Studio",
@@ -131,7 +153,8 @@
           "@type": "Offer",
           "price": "25000",
           "priceCurrency": "MXN",
-          "availability": "https://schema.org/InStock"
+          "availability": "https://schema.org/InStock",
+          "url": "https://wa.me/525539061305?text=Hi!%20I'm%20interested%20in%20the%20Aerial%20Yoga%20Teacher%20Training."
         }
       }
     }
