update class schedule

--- a/es/classes.html
+++ b/es/classes.html
@@ -300,24 +300,6 @@
                     <!-- Friday -->
                     <div class="grid-cell"></div>
                     <!-- Saturday -->
-                    <div class="grid-cell"></div>
-                    <!-- Sunday -->
-                    <div class="grid-cell"></div>
-
-                    <!-- 10:00 AM Row -->
-                    <!-- Time -->
-                    <div class="time-label">10:00</div>
-                    <!-- Monday -->
-                    <div class="grid-cell"></div>
-                    <!-- Tuesday -->
-                    <div class="grid-cell"></div>
-                    <!-- Wednesday -->
-                    <div class="grid-cell"></div>
-                    <!-- Thursday -->
-                    <div class="grid-cell"></div>
-                    <!-- Friday -->
-                    <div class="grid-cell"></div>
-                    <!-- Saturday -->
                     <div class="grid-cell">
                         <div class="class-card class-card--aerial" data-style="aerial">
                             <h3 class="class-name">Yoga Aéreo Flow</h3>
@@ -342,6 +324,50 @@
                                      width="200" height="200"
                                      loading="lazy">
                                 <span class="teacher-name">Camila</span>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Sunday -->
+                    <div class="grid-cell"></div>
+
+                    <!-- 10:00 AM Row -->
+                    <!-- Time -->
+                    <div class="time-label">10:00</div>
+                    <!-- Monday -->
+                    <div class="grid-cell"></div>
+                    <!-- Tuesday -->
+                    <div class="grid-cell"></div>
+                    <!-- Wednesday -->
+                    <div class="grid-cell"></div>
+                    <!-- Thursday -->
+                    <div class="grid-cell"></div>
+                    <!-- Friday -->
+                    <div class="grid-cell"></div>
+                    <!-- Saturday -->
+                    <div class="grid-cell">
+                        <div class="class-card class-card--aerial" data-style="aerial">
+                            <h3 class="class-name">Yoga Aéreo</h3>
+                            <div class="class-meta">
+                                <span class="class-duration">
+                                    <i data-lucide="clock"></i>
+                                    <span>60 min</span>
+                                </span>
+                                <span class="class-location">
+                                    <i data-lucide="map-pin"></i>
+                                    <span>Hari Om</span>
+                                </span>
+                            </div>
+                            <div class="teacher-banner">
+                                <img srcset="/assets/photos/classes/itzel-200.webp 200w,
+                                             /assets/photos/classes/itzel-300.webp 300w,
+                                             /assets/photos/classes/itzel-600.webp 600w"
+                                     sizes="50px"
+                                     src="/assets/photos/classes/itzel-200.webp"
+                                     alt="Itzel, Aerial Yoga teacher"
+                                     class="teacher-photo"
+                                     width="200" height="200"
+                                     loading="lazy">
+                                <span class="teacher-name">Itzel</span>
                             </div>
                         </div>
                     </div>
@@ -380,7 +406,7 @@
                     <!-- Monday -->
                     <div class="grid-cell">
                         <div class="class-card class-card--aerial" data-style="aerial">
-                            <h3 class="class-name">Yoga Aéreo Flow</h3>
+                            <h3 class="class-name">Pilates Aéreo</h3>
                             <div class="class-meta">
                                 <span class="class-duration">
                                     <i data-lucide="clock"></i>
@@ -410,7 +436,7 @@
                     <!-- Wednesday -->
                     <div class="grid-cell">
                         <div class="class-card class-card--aerial" data-style="aerial">
-                            <h3 class="class-name">Pilates Aéreo</h3>
+                            <h3 class="class-name">Yoga Aéreo Flow</h3>
                             <div class="class-meta">
                                 <span class="class-duration">
                                     <i data-lucide="clock"></i>
@@ -427,7 +453,7 @@
                                              /assets/photos/classes/camila-600.webp 600w"
                                      sizes="50px"
                                      src="/assets/photos/classes/camila-200.webp"
-                                     alt="Camila, Aerial Pilates teacher"
+                                     alt="Camila, Aerial Yoga Flow teacher"
                                      class="teacher-photo"
                                      width="200" height="200"
                                      loading="lazy">
@@ -481,6 +507,76 @@
                     <div class="grid-cell"></div>
                     <!-- Thursday -->
                     <div class="grid-cell"></div>
+                    <!-- Friday -->
+                    <div class="grid-cell"></div>
+                    <!-- Saturday -->
+                    <div class="grid-cell"></div>
+                    <!-- Sunday -->
+                    <div class="grid-cell"></div>
+
+                    <!-- 8:00 PM (20:00) Row -->
+                    <!-- Time -->
+                    <div class="time-label">20:00</div>
+                    <!-- Monday -->
+                    <div class="grid-cell">
+                        <div class="class-card class-card--aerial" data-style="aerial">
+                            <h3 class="class-name">Yoga Aéreo Principiantes</h3>
+                            <div class="class-meta">
+                                <span class="class-duration">
+                                    <i data-lucide="clock"></i>
+                                    <span>60 min</span>
+                                </span>
+                                <span class="class-location">
+                                    <i data-lucide="map-pin"></i>
+                                    <span>Aguacate</span>
+                                </span>
+                            </div>
+                            <div class="teacher-banner">
+                                <img srcset="/assets/photos/classes/camila-200.webp 200w,
+                                             /assets/photos/classes/camila-300.webp 300w,
+                                             /assets/photos/classes/camila-600.webp 600w"
+                                     sizes="50px"
+                                     src="/assets/photos/classes/camila-200.webp"
+                                     alt="Camila, Aerial Yoga teacher"
+                                     class="teacher-photo"
+                                     width="200" height="200"
+                                     loading="lazy">
+                                <span class="teacher-name">Camila</span>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Tuesday -->
+                    <div class="grid-cell"></div>
+                    <!-- Wednesday -->
+                    <div class="grid-cell"></div>
+                    <!-- Thursday -->
+                    <div class="grid-cell">
+                        <div class="class-card class-card--aerial" data-style="aerial">
+                            <h3 class="class-name">Yoga Aéreo Principiantes</h3>
+                            <div class="class-meta">
+                                <span class="class-duration">
+                                    <i data-lucide="clock"></i>
+                                    <span>60 min</span>
+                                </span>
+                                <span class="class-location">
+                                    <i data-lucide="map-pin"></i>
+                                    <span>Aguacate</span>
+                                </span>
+                            </div>
+                            <div class="teacher-banner">
+                                <img srcset="/assets/photos/classes/camila-200.webp 200w,
+                                             /assets/photos/classes/camila-300.webp 300w,
+                                             /assets/photos/classes/camila-600.webp 600w"
+                                     sizes="50px"
+                                     src="/assets/photos/classes/camila-200.webp"
+                                     alt="Camila, Aerial Yoga teacher"
+                                     class="teacher-photo"
+                                     width="200" height="200"
+                                     loading="lazy">
+                                <span class="teacher-name">Camila</span>
+                            </div>
+                        </div>
+                    </div>
                     <!-- Friday -->
                     <div class="grid-cell"></div>
                     <!-- Saturday -->
