--- a/es/classes.html
+++ b/es/classes.html
@@ -167,7 +167,7 @@
                 <li><a href="/es/classes.html" class="navbar-link active">Clases</a></li>
                 <li><a href="/es/events.html" class="navbar-link">Eventos</a></li>
                 <li class="has-dropdown">
-                    <span class="navbar-link dropdown-trigger" role="button" aria-haspopup="true" aria-expanded="false" tabindex="0">Certificaciones</span>
+                    <button class="navbar-link dropdown-trigger" aria-haspopup="true" aria-expanded="false">Certificaciones</button>
                     <div class="nav-dropdown" role="menu">
                         <a href="/es/certifications/aerial-yoga-100.html" class="nav-dropdown-item" role="menuitem">Formación de Profesores de Yoga Aéreo - 100 Horas</a>
                     </div>
